# YouTube-Comment-Sent-Analysis

./: .gitattributes  .gitignore  README.md  TMP_Notebook.ipynb  Youtube_URL_Sentiment_Analysis.ipynb  app.py  notebook.ipynb  pyproject.toml  requirements.txt
roberta_web_model/: config.json  tf_model.h5
