[project]
name = "youtube-comment-sent-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contractions>=0.1.73",
    "google-api-python-client>=2.188.0",
    "gradio>=6.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
